fix: recover address sync progress
